--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       class="interpolation-image" />
 
       <h2 class="subtitle has-text-justified" style="font-size:20px;">
-        We propose to use diffusion models to restore real-world low-quality images by constraining the generative space using several anchor images. 
+        We propose a method to directly apply a pre-trained diffusion model to blind image restoration. We achieve so by constraining the generative space using a set of anchor images. 
       </h2>
     </div>
   </div>
@@ -262,126 +262,6 @@
   </div>
 </section>
 
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <h3 class="title is-3">Results</h3>
-    <div class="columns" style="width:1054px; margin:0 auto; text-align: center;">
-      <div class="column" >
-        <div class="img-comp-container" style="margin-bottom: 10px;">
-          <div class="img-comp-img">
-            <img src="static/imgs/1_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/1_ours.png" width="256" height="256">
-          </div>
-        </div>
-        <div class="img-comp-container">
-          <div class="img-comp-img">
-            <img src="static/imgs/3_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/3_ours.png" width="256" height="256">
-          </div>
-        </div>
-      </div>
-
-      <div class="column" >
-        <div class="img-comp-container" style="margin-bottom: 10px;">
-          <div class="img-comp-img">
-            <img src="static/imgs/2_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/2_ours.png" width="256" height="256">
-          </div>
-        </div>
-        <div class="img-comp-container">
-          <div class="img-comp-img">
-            <img src="static/imgs/4_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/4_ours.png" width="256" height="256">
-          </div>
-        </div>
-      </div>
-
-      <div class="column" >
-        <div class="img-comp-container" style="margin-bottom: 10px;">
-          <div class="img-comp-img">
-            <img src="static/imgs/f1_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/f1_ours.png" width="256" height="256">
-          </div>
-        </div>
-        <div class="img-comp-container">
-          <div class="img-comp-img">
-            <img src="static/imgs/l1_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/l1_ours.png" width="256" height="256">
-          </div>
-        </div>
-      </div>
-
-      <div class="column" >
-        <div class="img-comp-container" style="margin-bottom: 10px;">
-          <div class="img-comp-img">
-            <img src="static/imgs/f2_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/f2_ours.png" width="256" height="256">
-          </div>
-        </div>
-        <div class="img-comp-container">
-          <div class="img-comp-img">
-            <img src="static/imgs/p2_input.png" width="256" height="256">
-          </div>
-          <div class="img-comp-img img-comp-overlay">
-            <img src="static/imgs/p2_ours.png" width="256" height="256">
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="content has-text-justified" style="font-size:20px;width:1054px; margin:0 auto; text-align: center;">
-    We can slide the images to see the differences between the input (right) and the output (left) more clearly. The first row are single-image restoration results while the second row are personalized restoration results.
-    </div>
-  </div>
-</section>
-
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-9">
-        <h2 class="title is-3">Motivation</h2>
-        <img src="./static/imgs/method.png"
-        class="interpolation-image" />    
-        <div class="content has-text-justified" style="font-size:20px;">
-          When sufficient Gaussian noise is added to the low- and high-quality image, 
-          we can bring them to the same distribution. 
-          The low-quality image can thus be denoised with a pre-trained diffusion model.
-          A regular diffusion step lands \(y_t\) in an arbitrary position in the generative space; with space constraining, the path of generation becomes more constrained towards the space defined by the anchor images.
-        </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-11">
-        <h2 class="title is-3">Pipeline</h2>
-        <img src="./static/imgs/pipeline.png"
-        class="interpolation-image" />    
-        <div class="content has-text-justified" style="font-size:20px;">
-          The core of our method is to constrain the generative space by fine-tuning a pre-trained diffusion model with either a generative album or a personal album. The generative album is generated from the input low-quality image with skip guidance to loosely follow the characteristics of the input. Once the generative space is constrained, at inference time, we can simply add noise to the input low-quality image and pass it through the diffusion model to do restoration.
-        </div>
-    </div>
-  </div>
-</section>
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -409,6 +289,93 @@
 
 
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <h3 class="title is-3">Interactive Comparison</h3>
+    <div class="columns is-centered">
+      <div class="column">
+        <div class="img-comp-container" style="margin-bottom: 10px;">
+          <div class="img-comp-img">
+            <img src="static/imgs/1_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/1_ours.png" width="224" height="224">
+          </div>
+        </div>
+        <div class="img-comp-container">
+          <div class="img-comp-img">
+            <img src="static/imgs/3_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/3_ours.png" width="224" height="224">
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="img-comp-container" style="margin-bottom: 10px;">
+          <div class="img-comp-img">
+            <img src="static/imgs/2_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/2_ours.png" width="224" height="224">
+          </div>
+        </div>
+        <div class="img-comp-container">
+          <div class="img-comp-img">
+            <img src="static/imgs/4_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/4_ours.png" width="224" height="224">
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="img-comp-container" style="margin-bottom: 10px;">
+          <div class="img-comp-img">
+            <img src="static/imgs/f1_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/f1_ours.png" width="224" height="224">
+          </div>
+        </div>
+        <div class="img-comp-container">
+          <div class="img-comp-img">
+            <img src="static/imgs/l1_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/l1_ours.png" width="224" height="224">
+          </div>
+        </div>
+      </div>
+
+      <div class="column" >
+        <div class="img-comp-container" style="margin-bottom: 10px;">
+          <div class="img-comp-img">
+            <img src="static/imgs/f2_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/f2_ours.png" width="224" height="224">
+          </div>
+        </div>
+        <div class="img-comp-container">
+          <div class="img-comp-img">
+            <img src="static/imgs/p2_input.png" width="224" height="224">
+          </div>
+          <div class="img-comp-img img-comp-overlay">
+            <img src="static/imgs/p2_ours.png" width="224" height="224">
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="content has-text-justified" style="font-size:20px;width:1054px; margin:0 auto; text-align: center;">
+    We can slide the images to see the differences between the input (right) and the output (left) more clearly. The first row are single-image restoration results while the second row are personalized restoration results.
+    </div>
+  </div>
+</section>
 
 
 
