--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
     </div>
 
-    <div class="content has-text-justified" style="font-size:20px;width:1054px; margin:0 auto; text-align: center;">
+    <div class="content has-text-justified">
     We can slide the images to see the differences between the input (right) and the output (left) more clearly. The first row are single-image restoration results while the second row are personalized restoration results.
     </div>
   </div>
