--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPRFW9DK4Q"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SFXYVWS8KZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-GPRFW9DK4Q');
-  </script> -->
+    gtag('config', 'G-SFXYVWS8KZ');
+  </script>
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
@@ -281,6 +280,9 @@
     class="interpolation-image" />
     <hr />
     <img src="./static/imgs/p1.png"
+    class="interpolation-image" />
+    <hr />
+    <img src="./static/imgs/p4.png"
     class="interpolation-image" />
 
 
