--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://arxiv.org/pdf/2312.17161.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -169,7 +169,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="#"
+                <a href="https://arxiv.org/abs/2312.17161"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -401,8 +401,8 @@
     <h2 class="title is-3">BibTeX</h2>
     <pre><code>@article{ding2023restoration,
       title={Restoration by Generation with Constrained Priors},
-      author={Ding, Zheng and Xuaner Zhang and Tu, Zhuowen and Xia, Zhihao},
-      journal={arXiv}
+      author={Ding, Zheng and Zhang, Xuaner and Tu, Zhuowen and Xia, Zhihao},
+      journal={arXiv preprint arXiv:2312.17161}
       year={2023}
     }</code></pre>
   </div>
