--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		  </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="">Zheng Ding</a><sup>1</sup>,</span>
+              <a href="mailto:zhding@ucsd.edu">Zheng Ding</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://ceciliavision.github.io">Xuaner Zhang</a><sup>2</sup>,</span>
             <span class="author-block">
