--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="column has-text-centered" >
           <h1 class="title is-1 publication-title">Restoration by Generation with Constrained Priors
 		  <br>
-		  <!-- <small>CVPR 2023</small> -->
+		  <small>CVPR 2024</small>
 		  </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
