--- a/index.html
+++ b/index.html
@@ -399,11 +399,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3">BibTeX</h2>
-    <pre><code>@article{ding2023restoration,
+    <pre><code>@InProceedings{ding2024restoration,
       title={Restoration by Generation with Constrained Priors},
-      author={Ding, Zheng and Zhang, Xuaner and Tu, Zhuowen and Xia, Zhihao},
-      journal={arXiv preprint arXiv:2312.17161}
-      year={2023}
+      author={Zheng Ding and Xuaner Zhang and Zhuowen Tu and Zhihao Xia},
+      booktitle ={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+      year={2024}
     }</code></pre>
   </div>
 </section>
